# cadavre-logicielle

./: Makefile  README.md  cadavre-logicielle.cabal  main.js  package.json
app/: Main.hs  TidalExtension.hs
app/Editor/: Backend.hs  CommandLine.hs  Frontend.hs  Hint.hs  Setup.hs  UI.hs
app/Game/: Actions.hs  Backend.hs  CommandLine.hs  Config.hs  Frontend.hs  Game.hs  Hint.hs  Setup.hs  Types.hs  UI.hs
static/: boot.hs  tidal.html  tidal.js
static/css/: cadavre-logicielle.css
