cabal-version:      3.0
name:               cadavre-logicielle

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Martin Gius
maintainer:         gius_martin@yahoo.de
build-type:         Simple
extra-doc-files:    README.md

executable cl-server
    main-is:          Main.hs
    other-modules:    Game.Backend
                      Game.Frontend
                      Game.Setup
                      Game.UI
                      Game.CommandLine
                      Game.Hint
                      Game.Game
                      Game.Actions
                      Game.Types
                      Game.Config
                      TidalExtension
    build-depends:    base >= 4.19,
                      text,
                      mtl,
                      containers,
                      tidal == 1.10.0,
                      tidal-link,
                      deepseq,
                      threepenny-gui,
                      exceptions,
                      filepath,
                      directory,
                      optparse-applicative,
                      network,
                      hosc,
                      time,
                      hint
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
                 -Wall
                 -dynamic
    ld-options: -Wl,-rpath -Wl,$ORIGIN/c-libs
    if os(darwin)
       ld-options: -mmacosx-version-min=10.9
