cabal-version:      3.0
name:               cadavre-logicielle

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Martin Gius
maintainer:         gius_martin@yahoo.de
build-type:         Simple
extra-doc-files:    README.md

executable cl-server
    main-is:          Main.hs
    other-modules:    Game.Backend
                      Game.Frontend
                      Game.Setup
                      Game.UI
                      Game.CommandLine
                      Game.Actions
                      Game.Types
                      Game.Config
    build-depends:    base >= 4.19,
                      text,
                      mtl,
                      containers,
                      tidal-link >= 1.0.4,
                      deepseq,
                      threepenny-gui,
                      exceptions,
                      filepath,
                      directory,
                      optparse-applicative,
                      network,
                      hosc >= 0.21 && < 0.22,
                      time,
                      zwirn-core >= 0.1.1 && < 0.2,
                      zwirn >= 0.1.0.1 && < 0.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
                 -Wall
